Fix small log file size bug.